// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`textAlign renders 0 1`] = `
Array [
  .c0 {
  text-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: 0;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders function 1`] = `
Array [
  .c0 {
  text-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: has;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: has;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders invalid theme path 1`] = `
Array [
  .c0 {
  text-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders negative number 1`] = `
Array [
  .c0 {
  text-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  text-align: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-align: July;
}

@media screen and (min-width:November) {
  .c0 {
    text-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  text-align: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-align: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-align: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-align: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    text-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    text-align: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    text-align: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    text-align: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    text-align: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  text-align: July;
}

@media May {
  .c0 {
    text-align: August;
  }
}

@media April {
  .c0 {
    text-align: September;
  }
}

@media January {
  .c0 {
    text-align: November;
  }
}

@media April {
  .c0 {
    text-align: August;
  }
}

@media June {
  .c0 {
    text-align: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-align: July;
}

@media May {
  .c0 {
    text-align: August;
  }
}

@media April {
  .c0 {
    text-align: September;
  }
}

@media January {
  .c0 {
    text-align: November;
  }
}

@media April {
  .c0 {
    text-align: August;
  }
}

@media June {
  .c0 {
    text-align: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  text-align: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-align: November;
  }
}

@media April {
  .c0 {
    text-align: January;
  }
}

@media January {
  .c0 {
    text-align: December;
  }
}

@media April {
  .c0 {
    text-align: April;
  }
}

@media June {
  .c0 {
    text-align: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  text-align: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-align: November;
  }
}

@media April {
  .c0 {
    text-align: January;
  }
}

@media January {
  .c0 {
    text-align: December;
  }
}

@media April {
  .c0 {
    text-align: April;
  }
}

@media June {
  .c0 {
    text-align: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    text-align: July;
  }
}

@media April {
  .c0 {
    text-align: August;
  }
}

@media January {
  .c0 {
    text-align: September;
  }
}

@media April {
  .c0 {
    text-align: November;
  }
}

@media June {
  .c0 {
    text-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    text-align: July;
  }
}

@media April {
  .c0 {
    text-align: August;
  }
}

@media January {
  .c0 {
    text-align: September;
  }
}

@media April {
  .c0 {
    text-align: November;
  }
}

@media June {
  .c0 {
    text-align: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-align: January;
  }
}

@media April {
  .c0 {
    text-align: December;
  }
}

@media January {
  .c0 {
    text-align: April;
  }
}

@media April {
  .c0 {
    text-align: May;
  }
}

@media June {
  .c0 {
    text-align: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    text-align: January;
  }
}

@media April {
  .c0 {
    text-align: December;
  }
}

@media January {
  .c0 {
    text-align: April;
  }
}

@media April {
  .c0 {
    text-align: May;
  }
}

@media June {
  .c0 {
    text-align: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders postitive number 1`] = `
Array [
  .c0 {
  text-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders string 1`] = `
Array [
  .c0 {
  text-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: July;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: June;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: June;
}

<div
    className="c0"
  />,
]
`;

exports[`textAlign renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`textAlign renders valid theme path 1`] = `
Array [
  .c0 {
  text-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  text-align: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
